# ai-structure-analysis

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE-NOTICES.md  Makefile  PHASE1_SPRINT1_COMPLETION.md  README.md  pyproject.toml  run_tests.sh  run_well_harness.py  sync_well_harness_approvals.py
.antigravity/: rules.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: calibration-cap-check.yml  ci.yml  docker-base.yml  golden-samples-validation.yml  trailer-check.yml  well_harness.yml
.planning/: STATE.md
agents/: __init__.py  architect.py  geometry.py  graph.py  human_fallback.py  lint_deck.py  llm.py  mesh.py  reviewer.py  router.py  solver.py  surrogate.py  surrogate_adapter.py  viz.py
backend/: .env.example  .gitignore  pytest.ini  requirements.txt
backend/app/: __init__.py  main.py
backend/tests/: conftest.py  test_allowable_stress.py  test_animation_manifest.py  test_api.py  test_ballistic_summary_draft.py  test_ballistics.py  test_boundary_summary.py  test_calculix_adapter.py  test_compliance.py  test_golden_samples.py  test_model_overview.py  test_model_overview_wiring.py  test_notion_sync_idempotency.py  test_notion_sync_properties.py  test_packaging.py  test_parsers.py  test_pressure_vessel_draft.py  test_register_decision.py  test_report.py  test_report_cli.py  test_report_draft.py  test_report_exporter.py  test_report_templates.py  test_solver.py  test_stress_derivatives.py  test_stress_linearization.py  test_units.py  test_verdict.py  test_viewport_native.py  test_viewport_watch_cli.py  test_vtu_exporter.py  test_well_harness.py  test_well_harness_notion_sync.py
checkers/: __init__.py  geometry_checker.py  jacobian.py
config/: well_harness_control_plane.yaml  well_harness_control_plane.yaml.example
docs/: PHASE1_SPRINT2_COMPLETION.md  RFC-001-W6-roadmap.md  RFC-001-strategic-pivot-and-mvp.md  RFC-002-multi-solver-workbench-retrospective.md  SPRINT_3_WEEK1_HANDOFF_REPORT.md  architecture.md  benchmark_report.md  demo_summary.md  gs_registry_check.md  quickstart.md  readme_adr_v63_sync_plan.md  runbook-schema-migration.md  sprint1_completion_summary.md  sprint1_report.md  sprint2_benchmark_report.md  sprint2_demo.md  sprint2_report.md  viewport_storyboard_hook_plan.md  well_harness_architecture.md
docs/adr/: ADR-000-template.md  ADR-011-pivot-claude-code-takeover.md  ADR-012-calibration-cap-for-t1-self-pass-rate.md  ADR-013-branch-protection-enforcement.md  ADR-014-ws-event-bus-for-workbench.md  ADR-015-workbench-agent-rpc-boundary.md  ADR-016-frd-vtu-result-viz.md  ADR-017-rag-facade-cli-lib-parity.md  ADR-018-electron-packaging-strategy.md  ADR-019-material-properties-data-model.md  ADR-020-allowable-stress-lookup.md  ADR-021-gs100-radioss-smoke-fixture.md  ADR-022-gs101-demo-unsigned-fixture.md
docs/development/: hf5_commit_trailers.md
docs/failure_patterns/: FP-001-gs001-cantilever-spec-fork.md  FP-002-gs002-truss-element-substitution.md  FP-003-gs003-missing-hole-and-bc-direction.md  README.md
docs/governance/: onboarding.md  routing.md
frontend/: index.html  package-lock.json  package.json
frontend/electron/: README.md  main.ts  postbuild.cjs  preload.cts  preload.ts  renderer.css  renderer.html  renderer.ts  tsconfig.json
frontend/src/: App.tsx  index.css
golden_samples/: gs001_detailed_report.py  gs002_detailed_report.py  gs003_detailed_report.py  make_gs002_report.py  make_gs003_report.py  make_reports.py  visualization_report.py
golden_samples/GS-001/: README.md  cantilever_theory.py  expected_results.json  gs001_c3d8_shearlock.inp  gs001_result.frd
golden_samples/GS-002/: README.md  expected_results.json  gs002.12d  gs002.frd  gs002.inp  gs002_result.frd  truss_theory.py
golden_samples/GS-003/: README.md  expected_results.json  gs003.12d  gs003.frd  gs003.inp  gs003_result.frd  plane_stress_theory.py
golden_samples/GS-100-radioss-smoke/: BOULE1V5_0001.rad  README.md
golden_samples/GS-101-demo-unsigned/: README.md
governance/: obsidian_sync.py  path_manager.py
persistence/: __init__.py  checkpointer.py
prompts/: architect_golden_prompt.md
reporters/: __init__.py  html_dashboard.py  markdown.py  vtp.py
reports/: calibration_state.json  dashboard.html  hf2_calibration.md  report.md  results.vtp
runs/: .gitkeep
schemas/: __init__.py  fault_injection.py  sim_plan.py  sim_state.py  surrogate_hint.py  viz_manifest.py  ws_events.py
scripts/: apply_branch_protection.sh  check_commit_trailers.py  compute_calibration_cap.py  extract_pr_self_pass_rate.py  gs_registry_check.py  hf1_path_guard.py  hf5_commit_trailer_check.py  install_dependencies.sh  migrate_notion_schema_s2_1.py  p1_03_generate_report.py  p1_04a_rag_audit.py  p1_05_fault_injection_report.py  run_agentic_benchmark.py  validate_golden_samples.py
solver/: solver_deck.inp
templates/: cantilever_static.inp.j2  linear_static.inp.j2  steady_thermal.inp.j2  transient_dynamic.inp.j2
tests/: __init__.py  conftest.py  test_architect.py  test_calculix_driver.py  test_check_commit_trailers.py  test_checkpointer.py  test_cold_smoke_e2e.py  test_compute_calibration_cap.py  test_env_probe.py  test_extract_pr_self_pass_rate.py  test_fault_injection.py  test_frd_parser.py  test_frd_parser_element_connectivity.py  test_freecad_driver.py  test_geometry_agent.py  test_geometry_checker.py  test_gha_workflow.py  test_github_writeback.py  test_gmsh_driver.py  test_golden_sample_validation.py  test_golden_sample_validator.py  test_gs_registry_check.py  test_hf1_path_guard.py  test_hf5_commit_trailer_check.py  test_hot_smoke_e2e.py  test_human_fallback.py  test_inp_linter.py  test_jacobian.py  test_markdown_reporter.py  test_materials_lib.py  test_mesh_agent.py  test_notion_sync_github_writeback_hook.py  test_openradioss_adapter.py  test_packaging.py  test_rag_advise_cli.py  test_rag_cli.py  test_rag_coverage_audit.py  test_rag_facade_parity.py  test_rag_knowledge_base.py  test_rag_preflight_publish.py  (+28 more)
tools/: __init__.py  calculix_driver.py  frd_parser.py  freecad_driver.py  gmsh_driver.py  golden_sample_validator.py  inp_linter.py
(+162 files in other folders)
