[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-structure-fea"
version = "0.2.0"
description = "AI-driven Finite Element Analysis engine with multi-agent orchestration"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Structure Analysis Team"}
]
keywords = ["fea", "structural-analysis", "ai", "calculix", "multi-agent", "langgraph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pydantic>=2.0",
    "jinja2>=3.1",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "httpx>=0.25",
    "python-docx>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.8",
]
agents = [
    "langgraph>=0.2",
    "langgraph-checkpoint-sqlite>=2.0",
]
solvers = [
    "meshio>=5.3",
    "gmsh>=4.11",
]
viz = [
    "pyvista>=0.42",
    "matplotlib>=3.7",
]
rag = [
    "sentence-transformers>=2.7",
    "chromadb>=0.5",
]
# OpenRadioss adapter — RFC-001 W7b. Reads .A***.gz animation files
# and T01 time-history binaries via Vortex-CAE/Vortex-Radioss (MPL-2.0),
# which wraps lasso-python (LS-Dyna .d3plot reader). The OpenRadioss
# solver itself (AGPL-3.0) is NOT a Python dep — it runs as a Docker
# subprocess (tools/openradioss/Dockerfile, lands in W7e).
#
# vortex-radioss is NOT distributed on PyPI (verified 2026-04-28: the
# name is unknown to `pip install vortex-radioss`). The project lives
# at github.com/Vortex-CAE/Vortex-Radioss. We resolve the source via
# [tool.uv.sources] below; pip-only installs need
# `pip install git+https://github.com/Vortex-CAE/Vortex-Radioss.git`.
openradioss = [
    "vortex-radioss>=1.2",
    "lasso-python>=2.0",
]

[project.urls]
Homepage = "https://github.com/kogamishinyajerry-ops/ai-structure-analysis"
Repository = "https://github.com/kogamishinyajerry-ops/ai-structure-analysis"
"Notion Control Hub" = "https://www.notion.so/AI-StructureAnalysis-345c68942bed80f6a092c9c2b3d3f5b9"

[project.scripts]
run-well-harness = "app.well_harness.cli:main"
report-cli = "app.services.report.cli:main"

[tool.setuptools.packages.find]
# Scan two roots so the repo's two parallel package trees both install
# as top-level packages:
#   ``.``       → legacy pre-RFC-001 sprint packages still living at the
#                 repo root (agents/, tools/, schemas/, checkers/,
#                 reporters/). Importable as ``import agents.*`` etc.
#   ``backend`` → the RFC-001 Layer-1..4 codebase under ``backend/app/``.
#                 Importable as ``import app.*`` (matches the
#                 ``from app.X import Y`` style used throughout
#                 backend/ source and tests, and matches the
#                 ``run-well-harness`` / ``report-cli`` console_script
#                 entries above).
#
# ``backend*`` is intentionally NOT in include — re-adding it would
# install the same on-disk code under both ``app.*`` and ``backend.app.*``
# top-level names, which causes duplicate-module surprises (singletons
# are no longer singletons across the two import paths).
where = [".", "backend"]
include = [
    "agents*",
    "tools*",
    "schemas*",
    "checkers*",
    "reporters*",
    "app*",
]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
    "backend/",
    "golden_samples/",
    "calculix_cases/",
    "frontend/",
    "scripts/",
    "run_well_harness.py",
    "sync_well_harness_approvals.py",
    ".venv/",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "legacy: tests covering frozen Sprint-N modules under app._frozen/* (RFC-001 §6.1 Bucket B). Excluded from MVP coverage gates by default; run with `-m legacy` to opt in.",
]
addopts = "-m 'not legacy'"

# uv-only source override for the openradioss extra. uv resolves
# `vortex-radioss` from this git ref; pip / PyPI installs must use
# `pip install git+https://github.com/Vortex-CAE/Vortex-Radioss.git`
# manually (PEP-440 doesn't have a portable [tool.uv.sources] equivalent
# in [project.optional-dependencies] yet — see
# https://docs.astral.sh/uv/reference/settings/#sources for the uv-
# specific syntax).
[tool.uv.sources]
vortex-radioss = { git = "https://github.com/Vortex-CAE/Vortex-Radioss.git" }
